# Linal

./: CMakeLists.txt  library.cpp  library.h  test.cpp
